--- a/tutorials/peak-motifs_tutorial.Rmd
+++ b/tutorials/peak-motifs_tutorial.Rmd
@@ -53,7 +53,7 @@ output:
 font-import: http://fonts.googleapis.com/css?family=Risque
 font-family: Garamond
 transition: linear
-bibliography: bibliography.bib
+bibliography: RSAT_20y.bib
 biblio-style: "apalike"
 link-citations: yes
 ---
@@ -72,7 +72,6 @@ knitr::opts_chunk$set(
 # knitr::asis_output("\\footnotesize")
 
 ```
---> 
 
 ## Introduction
 
