added references to NAR Web issues

--- a/tutorials/RSAT_20y.bib
+++ b/tutorials/RSAT_20y.bib
@@ -28,3 +28,64 @@
    Volume="1482",
    Pages="297--322"
 }
+% 25904632 
+
+@Article{pmid25904632,
+   Author="Medina-Rivera, A.  and Defrance, M.  and Sand, O.  and Herrmann, C.  and Castro-Mondragon, J. A.  and Delerce, J.  and Jaeger, S.  and Blanchet, C.  and Vincens, P.  and Caron, C.  and Staines, D. M.  and Contreras-Moreira, B.  and Artufel, M.  and Charbonnier-Khamvongsa, L.  and Hernandez, C.  and Thieffry, D.  and Thomas-Chollier, M.  and van Helden, J. ",
+   Title="{{R}{S}{A}{T} 2015: {R}egulatory {S}equence {A}nalysis {T}ools}",
+   Journal="Nucleic Acids Res.",
+   Year="2015",
+   Volume="43",
+   Number="W1",
+   Pages="W50--56",
+   Month="Jul"
+}
+
+
+% 21715389 
+@Article{pmid21715389,
+   Author="Thomas-Chollier, M.  and Defrance, M.  and Medina-Rivera, A.  and Sand, O.  and Herrmann, C.  and Thieffry, D.  and van Helden, J. ",
+   Title="{{R}{S}{A}{T} 2011: regulatory sequence analysis tools}",
+   Journal="Nucleic Acids Res.",
+   Year="2011",
+   Volume="39",
+   Number="Web Server issue",
+   Pages="86--91",
+   Month="Jul"
+}
+
+% 18495751 
+@Article{pmid18495751,
+   Author="Thomas-Chollier, M.  and Sand, O.  and Turatsinze, J. V.  and Janky, R.  and Defrance, M.  and Vervisch, E.  and Brohee, S.  and van Helden, J. ",
+   Title="{{R}{S}{A}{T}: regulatory sequence analysis tools}",
+   Journal="Nucleic Acids Res.",
+   Year="2008",
+   Volume="36",
+   Number="Web Server issue",
+   Pages="W119--127",
+   Month="Jul"
+}
+
+% 10641039 
+@Article{pmid10641039,
+   Author="van Helden, J.  and Andre, B.  and Collado-Vides, J. ",
+   Title="{{A} web site for the computational analysis of yeast regulatory sequences}",
+   Journal="Yeast",
+   Year="2000",
+   Volume="16",
+   Number="2",
+   Pages="177--187",
+   Month="Jan"
+}
+
+% 9719638 
+@Article{pmid9719638,
+   Author="van Helden, J.  and Andre, B.  and Collado-Vides, J. ",
+   Title="{{E}xtracting regulatory sites from the upstream region of yeast genes by computational analysis of oligonucleotide frequencies}",
+   Journal="J. Mol. Biol.",
+   Year="1998",
+   Volume="281",
+   Number="5",
+   Pages="827--842",
+   Month="Sep"
+}
